--- a/carbonlang.html
+++ b/carbonlang.html
@@ -7,7 +7,7 @@
             white-space: pre;
             font-family: Consolas, monospace;
             font-size: 15px;
-            margin: 20px;
+            margin-left: 20px;
         }
         h1 {
             font-size: 20px;
@@ -18,13 +18,14 @@
             margin-top: 0px;
             margin-bottom: 0px;
         }
+        h1 {
+            font-size: 30px;
+        }
     </style>
 </head>
 <body>
+<h1>CARBON PROGRAMMING LANGUAGE</h1>
 <div data-markdown>
-
-# CARBON PROGRAMMING LANGUAGE
-
 # Notation
 
 Production  = production_name "=" [ Expression ]
